force-app/main/default/objects/FEC_Hold_Case_Config__c/FEC_Hold_Case_Config__c.object-meta.xml
<CustomObject>
    <label>Hold Case Config</label>
    <nameField>
        <displayFormat>HCC -{0}</displayFormat>
        <label>Hold Case Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hold Case Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>