force-app/main/default/objects/FEC_Hold_Case_Config__c/fields/FEC_Auto_Hold_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>FEC_Auto_Hold_Duration_Minutes__c</fullName>
    <label>Auto Hold Duration (Minutes)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>