force-app/main/default/objects/FEC_Hold_Case_Config__c/fields/FEC_Auto_Hold_Release_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Auto_Hold_Release_Case_Status__c</fullName>
    <description>Exact Case.Status API value applied when automatic hold expires (batch).</description>
    <label>Auto Hold Release Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>