force-app/main/default/objects/FEC_Hold_Case_Config__c/fields/FEC_Changed_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Changed_Status__c</fullName>
    <label>Changed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending-CSSupport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>