force-app/main/default/objects/FEC_Hold_Case_Config__c/fields/FEC_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Status__c</fullName>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>