force-app/main/default/objects/FEC_Hold_Case_Config__c/fields/FEC_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Modified_Date__c</fullName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>