force-app/main/default/objects/FEC_Hold_Case_Config__c/fields/FEC_Nature_of_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Nature_of_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hold Case được thiết lập ở bộ Nature of Case</description>
    <label>Nature of Case</label>
    <referenceTo>FEC_Nature_of_Case__c</referenceTo>
    <relationshipLabel>Hold Case Configs</relationshipLabel>
    <relationshipName>Hold_Case_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>