force-app/main/default/objects/FEC_Hold_Case_Config__c/fields/FEC_Nature_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>FEC_Nature_of_Cases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nature of Cases</label>
    <referenceTo>FEC_Nature_of_Case__c</referenceTo>
    <relationshipLabel>Hold Case Config</relationshipLabel>
    <relationshipName>Hold_Case_Config</relationshipName>
    <type>Lookup</type>
</CustomField>