force-app/main/default/objects/FEC_Hold_Case_Config__c/fields/FEC_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Code</label>
    <referenceTo>FEC_Sub_Code__c</referenceTo>
    <relationshipLabel>Hold Case Config</relationshipLabel>
    <relationshipName>Hold_Case_Config</relationshipName>
    <type>Lookup</type>
</CustomField>